--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,11 @@
     font-family: 'Segoe UI, Tahoma, Geneva, Verdana, sans-serif';
     font-size: 24px;
     text-align: center;
+    
 
 }
 
-.answer:hover, #start:hover{
+.answer:hover{
     background-color: green;
 }
 
@@ -24,3 +25,12 @@
     padding-bottom: 10px;
 }
 
+#start {
+    background-color: lightcyan;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 0px;
+}
+body {
+    background-color: white;
+}
